About section alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -330,14 +330,15 @@ nav .icon-burger .line {
   min-width: fit-content;
   text-justify: distribute-all-lines;
 }
+.content-subsection{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 50%;
+}
 
 .image-section {
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  margin: auto;
   justify-content: center;
   width: 20%;
 }
@@ -354,10 +355,6 @@ nav .icon-burger .line {
 }
 
 .about-flexbox .downloadButton {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
   min-width: 100%;
   min-height: 90px;
   margin-left: 20px;
